--- a/assets/style.css
+++ b/assets/style.css
@@ -17,11 +17,6 @@ body {
     color: #333333
 }
 
-body.dark-theme {
-    background-color: #212121;
-    color: #f5f5f5
-}
-
 button {
     background: none;
     border: none;
@@ -124,38 +119,180 @@ main .pokemon-card .types {
     gap: 15px;
 }
 
-main .pokemon-card .type{
+main .pokemon-card .type {
     padding: 8px;
     border-radius: 10px;
 }
 
-.grass{
+.grass {
     background-color: rgb(64, 202, 10);
 }
 
-.fire{
+.fire {
     background-color: rgba(194, 38, 38, 0.904);
 }
 
-.water{
+.water {
     background-color: rgb(50, 90, 221);
 }
 
-.bug{
-   background-color: rgb(159, 219, 48);
+.bug {
+    background-color: rgb(159, 219, 48);
 }
 
-.poison{
+.poison {
     background-color: rgb(196, 52, 196);
 }
 
-.flying{
+.flying {
     background-color: rgb(189, 185, 185);
 }
 
-.main .poke-info{
+.main .poke-info {
     max-height: 80px;
     overflow-y: scroll;
     font-size: 14px;
     padding-right: 10px;
+}
+
+.container#blur.active {
+    filter: blur(20px);
+    pointer-events: none;
+    user-select: none;
+}
+
+.poke-foto {
+    width: 300px;
+    height: 300px;
+}
+
+main .pokemon-card .bulbassaur-btn .open-popup {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    color: #333333;
+    background-color: transparent;
+    border: none;
+}
+
+main .open-popup:hover {
+    cursor: pointer;
+    color: white
+}
+
+.bxs-x-circle {
+    position: relative;
+    font-size: 2rem;
+    padding: 10px;
+
+}
+
+.bxs-x-circle:hover {
+    cursor: pointer;
+}
+
+#popup-bulbasaur {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 65%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    color:white
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-bulbasaur {
+    background: linear-gradient(269deg, #33e40b, #a90be4);
+    background-size: 400% 400%;
+    -webkit-animation: grass-poison 26s ease infinite;
+    -moz-animation: grass-poison 26s ease infinite;
+    -o-animation: grass-poison 26s ease infinite;
+    animation: grass-poison 26s ease infinite;
+}
+
+@-webkit-keyframes grass-poison {
+    0% {
+        background-position: 0% 52%
+    }
+
+    50% {
+        background-position: 100% 49%
+    }
+
+    100% {
+        background-position: 0% 52%
+    }
+}
+
+@-moz-keyframes grass-poison {
+    0% {
+        background-position: 0% 52%
+    }
+
+    50% {
+        background-position: 100% 49%
+    }
+
+    100% {
+        background-position: 0% 52%
+    }
+}
+
+@-o-keyframes grass-poison {
+    0% {
+        background-position: 0% 52%
+    }
+
+    50% {
+        background-position: 100% 49%
+    }
+
+    100% {
+        background-position: 0% 52%
+    }
+}
+
+@keyframes grass-poison {
+    0% {
+        background-position: 0% 52%
+    }
+
+    50% {
+        background-position: 100% 49%
+    }
+
+    100% {
+        background-position: 0% 52%
+    }
+}
+
+#popup-bulbasaur.active {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+#popup-bulbasaur .data-container {
+
+    font-size: 14px;
+    padding-right: 10px;
+}
+
+#popup-bulbasaur .types-weaknesses{
+    display: flex;
+    gap: 15px;
 }
