--- a/assets/style.css
+++ b/assets/style.css
@@ -31,14 +31,7 @@ header {
 }
 
 header .logo {
-    width: 30px;
-}
-
-header .logo:hover,
-header .img-button:hover {
-    transform: scale(1.5);
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
+    width: 45px;
 }
 
 header .img-button {
@@ -166,15 +159,6 @@ main .pokemon-card .type {
     height: 300px;
 }
 
-main .pokemon-card .bulbassaur-btn .open-popup {
-    font-family: 'Poppins', sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    color: #333333;
-    background-color: transparent;
-    border: none;
-}
-
 main .open-popup {
     font-size: 16px;
 }
@@ -196,7 +180,62 @@ main .open-popup:hover {
 }
 
 h3 {
+    font-weight: 400;
     text-align: center;
+    color:white
+}
+
+.pokemon-name-popup {
+    color: white;
+    font-size: 25px;
+}
+
+.data-container {
+    text-align: center;
+    font-size: 14px;
+    color: white
+}
+
+.types-weaknesses {
+    justify-content: space-evenly;
+    display: flex;
+    gap: 15px;
+}
+
+.weak-fire {
+    color: rgb(224, 75, 75);
+}
+
+.weak-psychic {
+    color: rgb(255, 0, 170);
+}
+
+.weak-flying {
+    color: rgb(189, 179, 179);
+}
+
+.weak-ice {
+    color: rgb(81, 168, 218);
+}
+
+.weak-water{
+    color: rgb(50, 90, 221);
+}
+
+.weak-ground{
+    color: rgb(187, 158, 64);
+}
+
+.weak-rock{
+    color: rgb(255, 187, 0)
+}
+
+.weak-grass{
+    color: rgb(64, 202, 10)
+}
+
+.weak-eletric{
+    color: yellow
 }
 
 #popup-bulbasaur {
@@ -222,68 +261,34 @@ h3 {
 /*=======================BACKGROUND===================*/
 
 #popup-bulbasaur {
-    background: linear-gradient(269deg, #33e40b, #a90be4);
+    background: linear-gradient(181deg,#4fdb0e,#8d00ff);
     background-size: 400% 400%;
-    -webkit-animation: grass-poison 26s ease infinite;
-    -moz-animation: grass-poison 26s ease infinite;
-    -o-animation: grass-poison 26s ease infinite;
-    animation: grass-poison 26s ease infinite;
+
+    -webkit-animation: grass-poison 6s ease infinite;
+    -moz-animation: grass-poison 6s ease infinite;
+    -o-animation: grass-poison 6s ease infinite;
+    animation: grass-poison 6s ease infinite;
 }
 
 @-webkit-keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
-
 @-moz-keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
-
 @-o-keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
-
 @keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
 
 #popup-bulbasaur.bulbasaur {
@@ -293,36 +298,6 @@ h3 {
     transition: 0.5s;
 }
 
-#popup-bulbasaur .pokemon-name-popup {
-    color: white;
-    font-size: 25px;
-}
-
-#popup-bulbasaur .data-container {
-    font-size: 14px;
-    color: white
-}
-
-#popup-bulbasaur .types-weaknesses {
-    display: flex;
-    gap: 15px;
-}
-
-#popup-bulbasaur .weak-fire {
-    color: rgb(224, 75, 75);
-}
-
-#popup-bulbasaur .weak-psychic {
-    color: rgb(255, 0, 170);
-}
-
-#popup-bulbasaur .weak-flying {
-    color: rgb(189, 179, 179);
-}
-
-#popup-bulbasaur .weak-ice {
-    color: rgb(81, 168, 218);
-}
 
 /*=====================================IVYSAUR==============================================*/
 
@@ -349,68 +324,34 @@ h3 {
 /*=======================BACKGROUND===================*/
 
 #popup-ivysaur {
-    background: linear-gradient(269deg, #33e40b, #a90be4);
+    background: linear-gradient(181deg,#4fdb0e,#8d00ff);
     background-size: 400% 400%;
-    -webkit-animation: grass-poison 26s ease infinite;
-    -moz-animation: grass-poison 26s ease infinite;
-    -o-animation: grass-poison 26s ease infinite;
-    animation: grass-poison 26s ease infinite;
+
+    -webkit-animation: grass-poison 6s ease infinite;
+    -moz-animation: grass-poison 6s ease infinite;
+    -o-animation: grass-poison 6s ease infinite;
+    animation: grass-poison 6s ease infinite;
 }
 
 @-webkit-keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
-
 @-moz-keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
-
 @-o-keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
-
 @keyframes grass-poison {
-    0% {
-        background-position: 0% 52%
-    }
-
-    50% {
-        background-position: 100% 49%
-    }
-
-    100% {
-        background-position: 0% 52%
-    }
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
 
 #popup-ivysaur.ivysaur {
@@ -420,34 +361,498 @@ h3 {
     transition: 0.5s;
 }
 
-#popup-ivysaur .pokemon-name-popup {
-    color: white;
-    font-size: 25px;
-}
+/*=====================================VENUSAUR==============================================*/
 
-#popup-ivysaur .data-container {
-    font-size: 14px;
-    color: white
-}
-
-#popup-ivysaur .types-weaknesses {
-    justify-content: space-evenly;
+#popup-venusaur {
+    border-radius: 25px;
     display: flex;
-    gap: 15px;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
 }
 
-#popup-ivysaur .weak-fire {
-    color: rgb(224, 75, 75);
+/*=======================BACKGROUND===================*/
+
+#popup-venusaur {
+    background: linear-gradient(181deg,#4fdb0e,#8d00ff);
+    background-size: 400% 400%;
+
+    -webkit-animation: grass-poison 6s ease infinite;
+    -moz-animation: grass-poison 6s ease infinite;
+    -o-animation: grass-poison 6s ease infinite;
+    animation: grass-poison 6s ease infinite;
 }
 
-#popup-ivysaur .weak-psychic {
-    color: rgb(255, 0, 170);
+@-webkit-keyframes grass-poison {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes grass-poison {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes grass-poison {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes grass-poison {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
 }
 
-#popup-ivysaur .weak-flying {
-    color: rgb(189, 179, 179);
+#popup-venusaur.venusaur {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
 }
 
-#popup-ivysaur .weak-ice {
-    color: rgb(81, 168, 218);
+/*=====================================CHARMANDER==============================================*/
+
+#popup-charmander {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-charmander {
+    background: linear-gradient(181deg, #e11010, #f77a00);
+    background-size: 400% 400%;
+
+    -webkit-animation: fire 11s ease infinite;
+    -moz-animation: fire 11s ease infinite;
+    -o-animation: fire 11s ease infinite;
+    animation: fire 11s ease infinite;
+}
+
+@-webkit-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-charmander.charmander {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/*=====================================CHARMELEON==============================================*/
+
+#popup-charmeleon {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-charmeleon {
+    background: linear-gradient(181deg, #e11010, #f77a00);
+    background-size: 400% 400%;
+
+    -webkit-animation: fire 11s ease infinite;
+    -moz-animation: fire 11s ease infinite;
+    -o-animation: fire 11s ease infinite;
+    animation: fire 11s ease infinite;
+}
+
+@-webkit-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-charmeleon.charmeleon {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/*=====================================CHARIZARD==============================================*/
+
+#popup-charizard {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-charizard {
+    background: linear-gradient(181deg, #e11010, #f77a00);
+    background-size: 400% 400%;
+
+    -webkit-animation: fire 11s ease infinite;
+    -moz-animation: fire 11s ease infinite;
+    -o-animation: fire 11s ease infinite;
+    animation: fire 11s ease infinite;
+}
+
+@-webkit-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes fire {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-charizard.charizard {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/*=====================================CHARIZARD==============================================*/
+
+#popup-squirtle {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-squirtle {
+    background: linear-gradient(181deg, #104ce1, #00d4f7);
+    background-size: 400% 400%;
+
+    -webkit-animation: water 11s ease infinite;
+    -moz-animation: water 11s ease infinite;
+    -o-animation: water 11s ease infinite;
+    animation: water 11s ease infinite;
+}
+
+@-webkit-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-squirtle.squirtle {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/*=====================================WARTORTLE==============================================*/
+
+#popup-wartortle {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-wartortle {
+    background: linear-gradient(181deg, #104ce1, #00d4f7);
+    background-size: 400% 400%;
+
+    -webkit-animation: water 11s ease infinite;
+    -moz-animation: water 11s ease infinite;
+    -o-animation: water 11s ease infinite;
+    animation: water 11s ease infinite;
+}
+
+@-webkit-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-wartortle.wartortle {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/*=====================================BLASTOISE==============================================*/
+
+#popup-blastoise {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-blastoise {
+    background: linear-gradient(181deg, #104ce1, #00d4f7);
+    background-size: 400% 400%;
+
+    -webkit-animation: water 11s ease infinite;
+    -moz-animation: water 11s ease infinite;
+    -o-animation: water 11s ease infinite;
+    animation: water 11s ease infinite;
+}
+
+@-webkit-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-blastoise.blastoise {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/*=====================================CATERPIE==============================================*/
+
+#popup-caterpie {
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    height: 80%;
+    padding: 10px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 3);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+/*=======================BACKGROUND===================*/
+
+#popup-caterpie {
+    background: linear-gradient(181deg, #9bcc02, #beee00);
+    background-size: 400% 400%;
+
+    -webkit-animation: water 11s ease infinite;
+    -moz-animation: water 11s ease infinite;
+    -o-animation: water 11s ease infinite;
+    animation: water 11s ease infinite;
+}
+
+@-webkit-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-moz-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@-o-keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+@keyframes water {
+    0%{background-position:50% 0%}
+    50%{background-position:50% 100%}
+    100%{background-position:50% 0%}
+}
+
+#popup-caterpie.caterpie {
+    top: 50%;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
 }
